--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,50 @@
 
-
-/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IiIsImZpbGUiOiJzdHlsZS5jc3MifQ== */
+/* Global */
+*, *::before, *::after {
+    box-sizing: border-box;
+  }
+  
+  body {
+    margin: 0;
+    text-align: center;
+    background: #fff;
+    font-size: 16px;
+    line-height: 1.7;
+    font-family: "Montserrat";
+  }
+  
+  .container {
+    max-width: 1140px;
+    margin: 0 auto;
+    padding: 20px;
+  }
+  
+  section {
+    padding: 80px 0px;
+  }
+  
+  .section-title {
+    position: relative;
+    font-family: "Montserrat";
+    font-size: 50px;
+    font-weight: 800;
+    margin: 0 0 60px 0;
+  }
+  
+  h2 {
+    font-size: 40px;
+    font-weight: 900;
+    margin-bottom: -20px;
+  }
+  
+  h3 {
+    font-family: "Droid Serif", serif;
+    font-weight: 100;
+    font-style: italic;
+    color: #747474;
+    margin-bottom: 60px;
+  }
+  
+  h4 {
+    font-size: 20px;
+  }
