--- a/css/style.css
+++ b/css/style.css
@@ -48,3 +48,36 @@
   h4 {
     font-size: 20px;
   }
+  /* Navigation */
+.navigation {
+    background: inherit;
+    padding: 30px 0;
+    color: #fff;
+  }
+  .navigation ul {
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+    float: right;
+  }
+  .navigation ul ul li {
+    display: block;
+    margin: 12px;
+  }
+  .navigation li {
+    display: inline-block;
+    margin-right: 36px;
+    position: relative;
+  }
+  .navigation li a {
+    text-decoration: none;
+    color: #fff;
+  }
+  
+  .navbar-brand {
+    font-family: "Wisdom Script", sans-serif;
+    color: #edc842;
+    font-size: 35px;
+    float: left;
+    margin-left: 50px;
+  }
