--- a/css/style.css
+++ b/css/style.css
@@ -113,3 +113,39 @@
     font-size: 60px;
     margin-top: -20px;
   }
+  /* btn */
+.btn {
+    display: inline-block;
+    min-width: 220px;
+    margin: 60px auto 0 auto;
+    padding: 16px;
+    border-radius: 5px;
+    font-family: "Montserrat";
+    font-size: 16px;
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+    /*border-width: 2px;
+    border-style: solid;*/
+    transition: all 1s;
+  }
+  
+  .btn-one {
+    border-color: #fff;
+    color: #fff;
+    background-image: linear-gradient(90deg, #edc842 50%, transparent 50%);
+    background-position: 0 100%;
+    background-size: 300%;
+  }
+  
+  .btn:hover {
+    background-position: 100% 0;
+    background-color: #ff5e57;
+  }
+  
+  .btn-one:hover {
+    background-image: linear-gradient(45deg, #edc842, 50%, transparent 50%);
+    transition: all 1s;
+    color: #fff;
+  }
+  
