--- a/css/style.css
+++ b/css/style.css
@@ -138,10 +138,6 @@
     background-size: 300%;
   }
   
-  .btn:hover {
-    background-position: 100% 0;
-    background-color: #ff5e57;
-  }
   
   .btn-one:hover {
     background-image: linear-gradient(45deg, #edc842, 50%, transparent 50%);
@@ -192,4 +188,34 @@
     font-size: 18px;
     margin-top: -40px;
     padding-bottom: 20px;
-  }  
+  }  /*footer*/
+  .footer {
+    padding: 30px 0;
+  }
+  .footer p {
+    font-size: 16px;
+    color: #747474;
+  }
+  .footer ul {
+    margin: auto;
+    text-decoration: none;
+  }
+  .footer ul li {
+    text-decoration: none;
+    font-size: 0;
+    display: inline;
+  }
+  .footer ul li .icon {
+    font-size: 25px;
+    color: #fff;
+    background: #242424;
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    margin: 5px;
+  }
+  .footer ul li i {
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+  }
